fixes alignment

--- a/src/App.scss
+++ b/src/App.scss
@@ -57,7 +57,7 @@
 
   .Footer {
     display: flex;
-    align-items: center;
+    align-items: flex-end;
     gap: 18px;
 
     a:hover {
